--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,19 @@
   <meta charset="utf-8">
   <title>SassyChef</title>
   <base href="./">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- prevent input boxes expanding the container div when set in focus on mobile device's browser 
+	-->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>  
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1">
+  --> 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 	<!-- angular 8, bootstrap 3.4.1 -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<!-- 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+ -->	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
 <body>
